# autoparse-rs

./: Cargo.toml  README.md  debug.rs  expanded.rs  poc.rs  test.json
autoparse/: Cargo.toml
autoparse-derive/: Cargo.toml
autoparse-derive/src/: lib.rs  parsable.rs  token_set.rs  writable.rs
autoparse-general/: Cargo.toml  README.md  expandedd.rs  num.rs.bkp
autoparse-general/src/: lib.rs  literal.rs  numeric.rs  punchuated.rs  space.rs
autoparse-general/src/token/: brace.rs  bracket.rs  mod.rs
autoparse/src/: auto.rs  lib.rs  parsable.rs  parse_error.rs  parse_stream.rs  token.rs  writable.rs
autoparse/src/general/: mod.rs  space.rs
example-json/: Cargo.toml  out.txt  t.json  test.json
example-json/src/: main.rs
slicebuffer/: Cargo.toml  README.md
slicebuffer/src/: lib.rs
