[package]
name = "autoparse-general"
version = "0.1.0"
authors = ["sodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autoparse = { path = "../autoparse/" }
autoparse-derive = { path = "../autoparse-derive/" }
slicebuffer = { path = "../slicebuffer/" }
