[package]
name = "autoparse"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.6"
slicebuffer = { path = "../slicebuffer" }
autoparse-derive = { path = "../autoparse-derive" }
